Adicionando outros campos necessários para realizar o cadastro

--- a/BlockTechMVC/BlockTechMVC/appsettings.json
+++ b/BlockTechMVC/BlockTechMVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlockTechMVC-F1616DF3-E21A-4426-85C7-850DF9ADABE3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-LBQF810B;Database=BlockTechMVC;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
