--- a/BlockTechMVC/BlockTechMVC/appsettings.json
+++ b/BlockTechMVC/BlockTechMVC/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MercadoBitcoinOptions": {
+    "BaseUrl": "https://www.mercadobitcoin.net/"
+  }
 }
